--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,73 @@
+body, html {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+/* Ensure #root takes up the whole viewport */
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  height: 100%;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+/* Apply styles to the app container to take up the whole screen */
+.app {
+  height: 100%;
+    flex: 1;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text-white {
+  color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.bg {
+  background-image: url('./assets/bluesky_house.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.card {
-  padding: 2em;
+.transparent-bg {
+  background-color: transparent;
 }
 
-.read-the-docs {
-  color: #888;
+.footer {
+  background-color: rgba(0, 0, 0, 0.5); /* Transparent black background */
+  color: white; /* White text color */
+  padding: 20px; /* Add padding for better spacing */
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.marketplace-text {
+  font-weight: bold;
+}
+/* Appropriate CSS for styling the navbar *//* Appropriate CSS for styling the navbar */
+.navbar {
+  background-color: rgba(0, 0, 0, 0.5); /* Transparent black background */
+  color: white; /* White text color */
+}
+
+.navbar-brand {
+  font-weight: bold;
+}
+
+.navbar-nav {
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: white; /* White text color for links */
+}
+
+.nav-link:hover {
+  text-decoration: underline; /* Add underline on hover */
 }
